# house

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  House.sln  LICENSE  Makefile  README.md  brunch-config.js  home.env  house.cabal  house.service  mix.exs  package.json  publish-to-pi.sh  start-container.sh
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  secret.exs-sample  test.exs
house/: .ghci  .gitignore  LICENSE  README.md  house.cabal
house/src/: hue.hs  main.hs
house/src/hue/: endpoint.hs  light.hs  motionsensor.hs  reading.hs
lib/: house.ex
lib/house/: endpoint.ex  hue.ex  lights.ex  mode.ex  presence.ex  scenes.ex  updater.ex
lib/house/hue/: light.ex  room.ex  rooms.ex  sensor.ex  sensors.ex
priv/static/: manifest.json
priv/static/css/: app.css  app.css.map
priv/static/js/: app.js  (+3 more)
resources/: icon-87cbfbbec0d36e6cba32210eadf2eb61.psd  icon-away.psd
scripts/: build-and-upload.sh  compile-in-container.sh  create-container.sh
src/: hue.hs  main.hs
src/Hue/: API.fs  Hue.fsproj  Types.fs
src/Lights/: LightRules.fs  LightServer.fs  Lights.fsproj
src/Web/: Program.fs  Router.fs  Web.fsproj
src/house/: gui.hs  room.hs
src/hue/: group.hs  light.hs
test/controllers/: page_controller_test.exs
test/support/: channel_case.ex  conn_case.ex
test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
web/: gettext.ex  router.ex  web.ex
web/channels/: updates_channel.ex  user_socket.ex
web/controllers/: page_controller.ex
web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
(+19 files in other folders)
