name:                house
version:             0.1.0.0
synopsis:            Automatic control of Philips Hue lights based on presence detection and time of day.
homepage:            https://github.com/sebastian/house#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Probst Eide
copyright:           2018 Sebastian Probst Eide
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable house
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Hue
                     , Hue.Endpoint
                     , Hue.Light
                     , Hue.MotionSensor
                     , Hue.Group
                     , Hue.Reading
                     , House.Gui
                     , House.Room
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , bytestring
                     , req
                     , time
                     , unordered-containers
                     , mtl
                     , scientific
                     , ekg
                     , threepenny-gui
  ghc-options:        -with-rtsopts=-T
